# Streaming-VLM-Optimization

./: .gitattributes  .gitignore  AGENTS.md  README.md  environment.cert.yml  environment.gpu.yml  environment.yml  prepare.sh  pyproject.toml  run_certification_experiment.bat  run_certification_experiment.ps1  run_eval.sh  run_research_pipeline.bat  run_research_pipeline.ps1
docs/: budget_topk_semantic_admission_20260604_zh.md  conda_validation.md  dataset_assets_zh.md  design_route_summary_20260603_zh.md  fps_dataset_sensitivity_20260604_zh.md  hybrid_selector_probe_20260604_zh.md  joint_vit_rekv_design_zh.md  large_validation_query_decoupled_results_20260604_zh.md  large_validation_runbook_20260603_zh.md  llm_judge_results_20260602_zh.md  local_remote_workflow.md  qa_accuracy_metrics_20260602_zh.md  query_aware_recent_retrieval_20260603_zh.md  query_decoupled_baseline_20260603_zh.md  raw_rgb_budget_selector_20260604_zh.md  research_iteration_log_zh.md  research_pivot_vit_reuse_streaming_bench_20260604_zh.md  rvs_ego_initial_20260602_zh.md  rvs_ego_repeats_judge_analysis_20260602_zh.md  rvs_movie_repeats_20260602_zh.md  semantic_coverage_floor_probe_20260604_zh.md  semantic_recency_correction_20260603_zh.md  semantic_stream_research_findings_zh.md  streaming_vqa_benchmark_plan_zh.md  turbovit_v1_experiment_log.md  turbovit_v1_experiment_log_zh.md
model/: abstract_rekv.py  flash_vstream_rekv.py  llava_onevision_rekv.py  longva_rekv.py  patch.py  video_llava_rekv.py  vit_patch.py
model/longva/: pyproject.toml
scripts/: analyze_bandwidth_qa_failures.py  analyze_shallow_vit_candidates.py  check_ovo_bench_assets.py  check_streaming_benchmark_targets.py  check_streaming_video_assets.py  chunk_ovo_bench_source_subset.py  compare_qa_predictions.py  download_streaming_benchmarks.sh  download_vstream_assets.py  evaluate_open_qa_overlap.py  evaluate_ovo_bench.py  evaluate_streaming_qa_rules.py  extract_ovo_bench_source_subset.sh  extract_ovo_bench_subset.sh  judge_qa_pairwise.py  link_vstream_assets.py  prepare_ovo_bench_subset.py  (+30 more)
(+77 files in other folders)
